--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "#models/*": "./app/models/*.js",
     "#mails/*": "./app/mails/*.js",
     "#services/*": "./app/services/*.js",
+    "#jobs/*": "./app/jobs/*.js",
     "#listeners/*": "./app/listeners/*.js",
     "#events/*": "./app/events/*.js",
     "#middleware/*": "./app/middleware/*.js",
@@ -67,6 +68,7 @@
     "@aws-sdk/client-s3": "^3.985.0",
     "@aws-sdk/s3-request-presigner": "^3.985.0",
     "@inertiajs/react": "^2.3.13",
+    "@rlanz/bull-queue": "^3.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
