--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@adonisjs/tsconfig/tsconfig.app.json",
   "compilerOptions": {
     "rootDir": "./",
-    "outDir": "./build"
+    "outDir": "./build",
+    "paths": {
+      "#jobs/*": ["./app/jobs/*.js"]
+    }
   },
   "exclude": ["./inertia/**/*", "node_modules", "build"]
 }
