--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.11.24",
     "@types/luxon": "^3.7.1",
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^22.15.18",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
@@ -66,15 +67,19 @@
     "@adonisjs/vite": "^4.0.0",
     "@aws-sdk/client-s3": "^3.985.0",
     "@aws-sdk/s3-request-presigner": "^3.985.0",
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@inertiajs/react": "^2.3.13",
     "@rlanz/bull-queue": "^3.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
+    "filepond": "^4.32.11",
     "luxon": "^3.7.2",
+    "lz-string": "^1.5.0",
     "pg": "^8.18.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-filepond": "^7.1.3",
     "reflect-metadata": "^0.2.2",
     "tailwindcss": "^4.1.18"
   },
