--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@adonisjs/vite": "^4.0.0",
     "@aws-sdk/client-s3": "^3.985.0",
     "@aws-sdk/s3-request-presigner": "^3.985.0",
+    "@smithy/node-http-handler": "^4.0.0",
     "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@inertiajs/react": "^2.3.13",
     "@rlanz/bull-queue": "^3.1.0",
