--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
   "type": "module",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "node build/bin/server.js",
+    "start": "pm2 start ecosystem.config.cjs",
+    "stop": "pm2 stop ecosystem.config.cjs",
+    "restart": "pm2 restart ecosystem.config.cjs",
+    "delete": "pm2 delete ecosystem.config.cjs",
+    "logs": "pm2 logs",
+    "monitor": "pm2 monit",
     "build": "node ace build && vite build",
     "dev": "node ace serve --hmr",
     "test": "node ace test",
     "lint": "eslint .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
-    "pm2:start": "pm2 start ecosystem.config.cjs",
-    "pm2:stop": "pm2 stop ecosystem.config.cjs",
-    "pm2:restart": "pm2 restart ecosystem.config.cjs",
-    "pm2:delete": "pm2 delete ecosystem.config.cjs",
-    "pm2:logs": "pm2 logs",
-    "pm2:monitor": "pm2 monit",
     "queue:listen": "node ace queue:listen"
   },
   "imports": {
@@ -86,6 +85,7 @@
     "luxon": "^3.7.2",
     "lz-string": "^1.5.0",
     "pg": "^8.18.0",
+    "pm2": "^6.0.5",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-filepond": "^7.1.3",
