--- a/package.json
+++ b/package.json
@@ -63,20 +63,22 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^9.4.0",
+    "@adonisjs/cache": "^1.3.1",
     "@adonisjs/core": "^6.18.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/inertia": "^3.1.1",
     "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/redis": "^9.2.0",
     "@adonisjs/session": "^7.5.1",
     "@adonisjs/shield": "^8.2.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
     "@aws-sdk/client-s3": "^3.985.0",
     "@aws-sdk/s3-request-presigner": "^3.985.0",
-    "@smithy/node-http-handler": "^4.0.0",
     "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@inertiajs/react": "^2.3.13",
     "@rlanz/bull-queue": "^3.1.0",
+    "@smithy/node-http-handler": "^4.0.0",
     "@tailwindcss/vite": "^4.1.18",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
